--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+src/CashFlow.Api/appsettings.Development.json
+
 # User-specific files
 *.rsuser
 *.suo
